--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,8 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage",
+    "unlimitedStorage"
   ]
 }
