--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   "author": "Ian Sinnott <ian@iansinnott.com>",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint src",
     "watch": "webpack --config ./webpack.config.js --watch",
     "build": "NODE_ENV=production webpack --config ./webpack.config.js",
     "postbuild": "./postbuild.sh"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.1.0",
+    "eslint-config-zen": "^2.0.4",
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-react": "^7.1.0",
     "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.6"
   }
