--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postbuild": "./postbuild.sh"
   },
   "devDependencies": {
+    "ava": "^0.19.1",
     "babel-eslint": "^7.2.3",
     "eslint": "^4.1.0",
     "eslint-config-zen": "^2.0.4",
