--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "stylite",
-  "version": "0.1.0",
-  "description": "Style any website with ease",
-  "main": "index.js",
+  "version": "0.2.0",
+  "description": "A super lightweight style editor. Apply any styles you want to any site.",
+  "main": "src/manifest.json",
   "repository": "git@github.com:iansinnott/stylite.git",
   "author": "Ian Sinnott <ian@iansinnott.com>",
   "license": "MIT",
   "scripts": {
     "lint": "eslint src",
     "watch": "webpack --config ./webpack.config.js --watch",
+    "prebuild": "./prebuild.sh",
     "build": "NODE_ENV=production webpack --config ./webpack.config.js",
     "postbuild": "./postbuild.sh"
   },
@@ -21,6 +22,7 @@
     "eslint-plugin-flowtype": "^2.34.0",
     "eslint-plugin-react": "^7.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "webpack": "^2.6"
   },
