--- a/package.json
+++ b/package.json
@@ -6,7 +6,19 @@
   "repository": "git@github.com:iansinnott/stylite.git",
   "author": "Ian Sinnott <ian@iansinnott.com>",
   "license": "MIT",
+  "ava": {
+    "require": [
+      "babel-register"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "babel-preset-es2015",
+      "babel-preset-stage-0"
+    ]
+  },
   "scripts": {
+    "test": "NODE_ENV=test ava",
     "lint": "eslint src",
     "watch": "webpack --config ./webpack.config.js --watch",
     "prebuild": "./prebuild.sh",
@@ -16,6 +28,9 @@
   "devDependencies": {
     "ava": "^0.19.1",
     "babel-eslint": "^7.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.0",
     "eslint-config-zen": "^2.0.4",
